# studious

./: .coveragerc  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
package/: TODOS.md
package/studious/: __init__.py
src/studious/: __main__.py
