[project]
name = "studious"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "q9i", email = "46249765+quantum9Innovation@users.noreply.github.com" }
]
dependencies = [
    "fire==0.4.0",
    "termcolor==1.1.0",
    "matplotlib~=3.7.1",
    "pyqt5~=5.15.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
studious = "studious.__main__:go"
