[metadata]
name = studious
version = 0.1.0
author = quantum9innovation
author_email = dev.quantum9innovation@gmail.com
description = A time manager for people without time
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantum9innovation/studious
project_urls =
    Bug Tracker = https://github.com/quantum9innovation/studious/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = package
packages = find:
python_requires = >=3.7

[options.packages.find]
where = package
